--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "7.1.1",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
+    "babel-plugin-transform-object-rest-spread": "6.23.0",
     "css-loader": "0.28.4",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.2",
@@ -24,6 +25,8 @@
     "react": "15.6.1",
     "react-dom": "15.6.1",
     "react-router-dom": "4.1.2",
+    "react-redux": "5.0.5",
+    "redux": "3.7.2",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "webpack": "3.1.0"
