--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
-    "express": "^4.16.3",
+    "express": "4.16.4",
     "extract-text-webpack-plugin": "^3.0.2",
     "node-sass": "4.9.3",
     "normalize.css": "7.0.0",
