--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "15.6.1",
     "react-redux": "5.0.5",
     "react-router-dom": "4.1.2",
+    "react-transition-group": "^2.5.0",
     "redux": "3.7.2",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
