adding buttons and description to projects page, rwd, serviceWorker, compressing images

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "heroku-postbuild": "npm run build:prod"
   },
   "dependencies": {
+    "@material-ui/core": "^3.2.2",
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
